--- a/src/EncryptionAlgorithm/Experimental/composer.json
+++ b/src/EncryptionAlgorithm/Experimental/composer.json
@@ -20,7 +20,7 @@
         }
     },
     "require": {
-        "lib-openssl": "*",
+        "ext-openssl": "*",
         "web-token/jwt-encryption-algorithm-rsa": "^2.1"
     },
     "require-dev": {
