--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
         "ext-mbstring": "*",
         "ext-openssl": "*",
         "ext-sodium": "*",
-        "brick/math": "^0.8.17",
+        "brick/math": "^0.8.17|^0.9",
         "fgrosse/phpasn1": "^2.0",
         "psr/event-dispatcher": "^1.0",
         "psr/http-client": "^1.0",
@@ -76,17 +76,17 @@
         "ext-gmp": "*",
         "bjeavons/zxcvbn-php": "^1.0",
         "blackfire/php-sdk": "^1.14",
-        "infection/infection": "^0.15|^0.16",
+        "infection/infection": "^0.15|^0.16|^0.17",
         "matthiasnoback/symfony-config-test": "^3.1|^4.0",
         "nyholm/psr7": "^1.0",
         "php-coveralls/php-coveralls": "^2.0",
         "php-http/httplug-bundle": "^1.7",
         "php-http/mock-client": "^1.0",
-        "phpstan/phpstan": "^0.11",
-        "phpstan/phpstan-deprecation-rules": "^0.11",
-        "phpstan/phpstan-phpunit": "^0.11",
-        "phpstan/phpstan-strict-rules": "^0.11",
-        "phpunit/phpunit": "^8.0",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-deprecation-rules": "^0.12",
+        "phpstan/phpstan-phpunit": "^0.12",
+        "phpstan/phpstan-strict-rules": "^0.12",
+        "phpunit/phpunit": "^8.0|^9.0",
         "symfony/browser-kit": "^4.2|^5.0",
         "symfony/framework-bundle": "^4.2|^5.0",
         "symfony/finder": "^4.2|^5.0",
