--- a/.github/workflows/functional-tests.yml
+++ b/.github/workflows/functional-tests.yml
@@ -20,7 +20,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: json, mbstring, openssl
+          extensions: json, mbstring, openssl, gmp
           coverage: xdebug
 
       - name: Validate composer.json and composer.lock
