--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,6 @@
         "symfony/polyfill-mbstring": "^1.12"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
         "ext-curl": "*",
         "ext-gmp": "*",
         "bjeavons/zxcvbn-php": "^1.0",
@@ -87,20 +86,22 @@
         "infection/infection": "^0.15|^0.16|^0.17|^0.18|^0.19|^0.20",
         "matthiasnoback/symfony-config-test": "^3.1|^4.0",
         "nyholm/psr7": "^1.3",
-        "php-coveralls/php-coveralls": "^2.0",
         "php-http/mock-client": "^1.0",
-        "phpstan/phpstan": "^0.12",
-        "phpstan/phpstan-deprecation-rules": "^0.12",
-        "phpstan/phpstan-phpunit": "^0.12",
-        "phpstan/phpstan-strict-rules": "^0.12",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^1.0",
+        "phpstan/phpstan-deprecation-rules": "^1.0",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpstan/phpstan-strict-rules": "^1.0",
         "phpunit/phpunit": "^8.0|^9.0",
+        "roave/security-advisories": "dev-latest",
         "symfony/browser-kit": "^4.2|^5.0",
         "symfony/finder": "^4.2|^5.0",
         "symfony/framework-bundle": "^4.2|^5.0",
         "symfony/http-client": "^5.2",
         "symfony/phpunit-bridge": "^4.2|^5.0",
         "symfony/serializer": "^4.2|^5.0",
-        "symfony/var-dumper": "^4.2|^5.0"
+        "symfony/var-dumper": "^4.2|^5.0",
+        "symfony/yaml": "^4.2|^5.0"
     },
     "replace": {
         "web-token/jwt-easy": "self.version",
