--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
         "psr/event-dispatcher": "^1.0",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
-        "spomky-labs/aes-key-wrap": "^5.0|^6.0",
+        "spomky-labs/aes-key-wrap": "^7.0",
         "symfony/config": "^5.4|^6.0",
         "symfony/console": "^5.4|^6.0",
         "symfony/dependency-injection": "^5.4|^6.0",
