--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,5 @@
 parameters:
-    level: 7
+    level: max
     paths:
         - src
     checkMissingIterableValueType: false
@@ -9,13 +9,6 @@ parameters:
         - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeDefinition::children\(\)#'
         - '#Parameter \#1 \$value of class FG\\ASN1\\Universal\\Integer constructor expects int\, string given\.#'
         - '#Variable static method call on Jose\\Component\\Core\\Util\\Hash\.#'
-        - '#Return type \(void\) of method Jose\\Bundle\\JoseFramework\\Routing\\JWKSetLoader::getResolver\(\) should be compatible with return type \(Symfony\\Component\\Config\\Loader\\LoaderResolverInterface\) of method Symfony\\Component\\Config\\Loader\\LoaderInterface::getResolver\(\)#'
-        - '#Method Jose\\Bundle\\JoseFramework\\Routing\\JWKSetLoader::(supports|load)\(\) has parameter \$type with no typehint specified\.#'
-        - '#.* should be contravariant with .*#'
-        - '#Call to deprecated function .*#'
-        - '#Parameter .* of function openssl_pkey_derive expects resource, string given\.#'
-        - '#Parameter .* of function call_user_func_array expects callable\(\)\: .* given\.#'
-        - '#Array .* does not accept object\.#'
         - '#Invalid type object to throw\.#'
         - '#Strict comparison using === between .* and .* will always evaluate to false\.#'
         - '#Binary operation "\^" between string and 1 results in an error\.#'
