--- a/.github/workflows/rector_checkstyle.yaml
+++ b/.github/workflows/rector_checkstyle.yaml
@@ -1,4 +1,4 @@
-name: Unit Tests
+name: Rector Checkstyle
 
 on: [push]
 
@@ -8,9 +8,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: ['7.2', '7.3', '7.4', '8.0']
-    name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
-
+        php-versions: [ '8.0' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -21,12 +19,11 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: json, mbstring, openssl, gmp
-          coverage: xdebug
+          extensions: json, mbstring, openssl, sqlite3
+          coverage: none
 
       - name: Install Composer dependencies
-        run: |
-          composer update --no-progress --no-suggest --prefer-dist --optimize-autoloader
+        run: composer update --no-progress --no-suggest --prefer-dist --optimize-autoloader
 
-      - name: Run tests
-        run: vendor/bin/phpunit -c phpunit.xml.dist --group=unit
+      - name: Rector
+        run: make rector
