--- a/.github/workflows/static-analyze.yml
+++ b/.github/workflows/static-analyze.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['7.4']
+        php-versions: ['8.0']
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
 
     steps:
@@ -21,7 +21,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: json, mbstring, openssl, gmp
+          extensions: json, mbstring, openssl, sqlite3
           coverage: xdebug
 
       - name: Install Composer dependencies
@@ -29,4 +29,4 @@ jobs:
           composer update --no-progress --no-suggest --prefer-dist --optimize-autoloader
 
       - name: PHPStan
-        run: composer test:typing
+        run: make st
