--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,7 @@
         "bjeavons/zxcvbn-php": "^1.0",
         "blackfire/php-sdk": "^1.14",
         "ekino/phpstan-banned-code": "^1.0",
-        "infection/infection": "^0.25",
+        "infection/infection": "^0.26",
         "matthiasnoback/symfony-config-test": "^3.1|^4.0",
         "nyholm/psr7": "^1.3",
         "php-http/mock-client": "^1.0",
@@ -142,6 +142,11 @@
         "spomky-labs/jose": "*"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "phpstan/extension-installer": true,
+            "infection/extension-installer": true,
+            "composer/package-versions-deprecated": true
+        }
     }
 }
