Add Symfony 6.0 support

--- a/composer.json
+++ b/composer.json
@@ -70,8 +70,8 @@
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
         "spomky-labs/aes-key-wrap": "^5.0|^6.0",
-        "symfony/config": "^4.2|^5.0",
-        "symfony/console": "^4.2|^5.0",
+        "symfony/config": "^4.2|^5.0|^6.0",
+        "symfony/console": "^4.2|^5.0|^6.0",
         "symfony/dependency-injection": "^4.2|^5.0",
         "symfony/event-dispatcher": "^4.2|^5.0",
         "symfony/http-kernel": "^4.2|^5.0",
