--- a/src/Bundle/JoseFramework/composer.json
+++ b/src/Bundle/JoseFramework/composer.json
@@ -21,7 +21,7 @@
     },
     "require": {
         "psr/event-dispatcher": "^1.0",
-        "symfony/config": "^4.2|^5.0",
+        "symfony/config": "^4.2|^5.0|^6.0",
         "symfony/dependency-injection": "^4.2|^5.0",
         "symfony/event-dispatcher": "^4.2|^5.0",
         "symfony/http-kernel": "^4.2|^5.0",
