--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,7 @@
         "matthiasnoback/symfony-config-test": "^3.1|^4.0",
         "nyholm/psr7": "^1.3",
         "php-http/mock-client": "^1.0",
+        "phpbench/phpbench": "^1.2",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.0",
         "phpstan/phpstan-deprecation-rules": "^1.0",
@@ -127,7 +128,6 @@
         "web-token/jwt-encryption-algorithm-experimental": "self.version",
         "web-token/signature-pack": "self.version",
         "web-token/encryption-pack": "self.version"
-
     },
    "suggest":{
        "ext-sodium": "Sodium is required for OKP key creation, EdDSA signature algorithm and ECDH-ES key encryption with OKP keys",
