--- a/src/Bundle/JoseFramework/composer.json
+++ b/src/Bundle/JoseFramework/composer.json
@@ -20,6 +20,7 @@
         }
     },
     "require": {
+        "php": ">=8.1",
         "psr/event-dispatcher": "^1.0",
         "symfony/config": "^5.4|^6.0",
         "symfony/dependency-injection": "^5.4|^6.0",
