--- a/src/EncryptionAlgorithm/Experimental/composer.json
+++ b/src/EncryptionAlgorithm/Experimental/composer.json
@@ -20,6 +20,7 @@
         }
     },
     "require": {
+        "php": ">=8.1",
         "ext-openssl": "*",
         "web-token/jwt-encryption-algorithm-rsa": "^3.0"
     }
