--- a/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
@@ -23,6 +23,7 @@
         "ext-sodium": "Sodium is required for OKP key creation, EdDSA signature algorithm and ECDH-ES key encryption with OKP keys"
     },
     "require": {
+        "php": ">=8.1",
         "ext-openssl": "*",
         "spomky-labs/aes-key-wrap": "^7.0",
         "web-token/jwt-encryption": "^3.0",
