--- a/src/SignatureAlgorithm/EdDSA/composer.json
+++ b/src/SignatureAlgorithm/EdDSA/composer.json
@@ -20,6 +20,7 @@
         }
     },
     "require": {
+        "php": ">=8.1",
         "ext-sodium": "*",
         "web-token/jwt-signature": "^3.0"
     }
