--- a/src/Bundle/JoseFramework/composer.json
+++ b/src/Bundle/JoseFramework/composer.json
@@ -35,5 +35,10 @@
         "web-token/jwt-key-mgmt": "Add Keys (JWK) and Key sets (JWKSet) management tools.",
         "web-token/jwt-signature": "Add signed tokens (JWS) support and useful Symfony services.",
         "symfony/serializer": "Use the Symfony serializer to serialize/unserialize JWS and JWE tokens."
+    },
+    "extra": {
+        "symfony": {
+            "endpoint": "https://github.com/web-token/recipes"
+        }
     }
 }
