"Cannot cast mixed to int." error ignored

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -16,5 +16,6 @@ parameters:
         - '#Parameter \#3 \$length of function mb_substr expects int\|null.*\.#'
         - '#Parameter \#2 \.\.\.\$values of function sprintf expects bool\|float\|int\|string\|null\, mixed given\.#'
         - '#Parameter \#1 \.\.\.\$arrays of function array_merge expects array\, mixed given\.#'
+        - '#Cannot cast mixed to int\.#'
 includes:
     - vendor/phpstan/phpstan/conf/bleedingEdge.neon
