--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,7 @@
         "matthiasnoback/symfony-config-test": "^3.1|^4.0",
         "nyholm/psr7": "^1.3",
         "php-http/mock-client": "^1.0",
+        "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpbench/phpbench": "^1.2",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.0",
