--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,18 @@
 * text=auto
 
+/.github export-ignore
+/packs export-ignore
 /performance export-ignore
+/tests export-ignore
+/.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.scrutinizer.yml export-ignore
-/.travis.yml export-ignore
+/.gitsplit.yml export-ignore
+/CODE_OF_CONDUCT.md export-ignore
+/ecs.php export-ignore
+/infection.json export-ignore
+/Makefile export-ignore
 /phpbench.json export-ignore
+/phpstan.neon export-ignore
 /phpunit.xml.dist export-ignore
-/README.md export-ignore
+/rector.php export-ignore
