--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 .phpbench
 .phpunit.result.cache
-.travis/phar-private.pem
 jose.phar
 jose.phar.pubkey
 jose.phar.version
-.travis/build-key.pem
-.travis/secrets.tar
 report.md
 composer.lock
 .php_cs
 .php_cs.cache
 vendor/
 src/Bundle/JoseFramework/var/
+infection.txt
