--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,7 +6,6 @@ parameters:
     checkGenericClassInNonGenericObjectType: false
     treatPhpDocTypesAsCertain: false
     ignoreErrors:
-        - '#Variable static method call on Jose\\Component\\Core\\Util\\Hash\.#'
         - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeDefinition::children\(\)#'
         - '#Parameter \#1 \$value of class FG\\ASN1\\Universal\\Integer constructor expects int\, string given\.#'
         - '#Invalid type object to throw\.#'
@@ -17,5 +16,5 @@ parameters:
         - '#Parameter \#2 \.\.\.\$values of function sprintf expects bool\|float\|int\|string\|null\, mixed given\.#'
         - '#Parameter \#1 \.\.\.\$arrays of function array_merge expects array\, mixed given\.#'
         - '#Cannot cast mixed to int\.#'
-includes:
-    - vendor/phpstan/phpstan/conf/bleedingEdge.neon
+        - '#Parameter .* of (static )?method .* expects Jose\\Component\\Core\\JWK, mixed given\.#'
+        - '#Cannot call method (get|has)\(\) on mixed\.#'
