--- a/composer.json
+++ b/composer.json
@@ -58,18 +58,18 @@
         "ext-openssl": "*",
         "ext-sodium": "*",
         "brick/math": "^0.9|^0.10",
-        "fgrosse/phpasn1": "^2.4",
+        "fgrosse/phpasn1": "^2.0",
         "paragonie/constant_time_encoding": "^2.4",
         "psr/event-dispatcher": "^1.0",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
         "spomky-labs/aes-key-wrap": "^7.0",
-        "symfony/config": "^6.1.3",
+        "symfony/config": "^5.4|^6.0",
         "symfony/console": "^5.4|^6.0",
-        "symfony/dependency-injection": "^6.1.3",
-        "symfony/event-dispatcher": "^6.1.0",
-        "symfony/http-kernel": "^6.1.3",
-        "symfony/polyfill-mbstring": "^1.26"
+        "symfony/dependency-injection": "^5.4|^6.0",
+        "symfony/event-dispatcher": "^5.4|^6.0",
+        "symfony/http-kernel": "^5.4|^6.0",
+        "symfony/polyfill-mbstring": "^1.12"
     },
     "require-dev": {
         "ext-curl": "*",
