--- a/.github/workflows/merge-me.yml
+++ b/.github/workflows/merge-me.yml
@@ -1,4 +1,4 @@
-name: Merge me!
+name: bot-auto-merge
 
 on:
   check_suite:
@@ -7,22 +7,14 @@ on:
 
 jobs:
   merge-me:
-    name: Merge me!
+    name: Auto-merge passing bot PRs
     runs-on: ubuntu-latest
     steps:
-      - name: Merge me!
-        uses: ridedott/merge-me-action@v2.10.17
+      - name: Auto-merge passing dependabot PRs
+        if: ${{ github.event.workflow_run.conclusion == 'success' }}
+        uses: ridedott/merge-me-action@v2
         with:
-          # Depending on branch protection rules, a  manually populated
-          # `GITHUB_TOKEN_WORKAROUND` environment variable with permissions to
-          # push to a protected branch must be used. This variable can have an
-          # arbitrary name, as an example, this repository uses
-          # `GITHUB_TOKEN_DOTTBOTT`.
-          #
-          # When using a custom token, it is recommended to leave the following
-          # comment for other developers to be aware of the reasoning behind it:
-          #
-          # This must be used as GitHub Actions token does not support
-          # pushing to protected branches.
+          # For clarity only. dependabot is default.
+          GITHUB_LOGIN: dependabot
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MERGE_METHOD: MERGE
+          ENABLED_FOR_MANUAL_CHANGES: "true"
