--- a/composer.json
+++ b/composer.json
@@ -74,31 +74,31 @@
     "require-dev": {
         "ext-curl": "*",
         "ext-gmp": "*",
-        "bjeavons/zxcvbn-php": "^1.3",
-        "blackfire/php-sdk": "^1.31",
+        "bjeavons/zxcvbn-php": "^1.0",
+        "blackfire/php-sdk": "^1.14",
         "ekino/phpstan-banned-code": "^1.0",
         "infection/infection": "^0.26",
-        "matthiasnoback/symfony-config-test": "^4.3.0",
-        "nyholm/psr7": "^1.5",
-        "php-http/mock-client": "^1.5",
+        "matthiasnoback/symfony-config-test": "^3.1|^4.0",
+        "nyholm/psr7": "^1.3",
+        "php-http/mock-client": "^1.0",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpbench/phpbench": "^1.2",
         "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^1.8",
+        "phpstan/phpstan": "^1.0",
         "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.1",
-        "phpstan/phpstan-strict-rules": "^1.4",
-        "phpunit/phpunit": "^9.5.23",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpstan/phpstan-strict-rules": "^1.0",
+        "phpunit/phpunit": "^9.5.5",
         "rector/rector": "^0.14",
         "roave/security-advisories": "dev-latest",
-        "symfony/browser-kit": "^6.1.3",
+        "symfony/browser-kit": "^5.4|^6.0",
         "symfony/finder": "^5.4|^6.0",
-        "symfony/framework-bundle": "^6.1.3",
+        "symfony/framework-bundle": "^5.4|^6.0",
         "symfony/http-client": "^5.4|^6.0",
-        "symfony/phpunit-bridge": "^6.1.3",
-        "symfony/serializer": "^6.1.3",
-        "symfony/var-dumper": "^6.1.3",
-        "symfony/yaml": "^6.1.3",
+        "symfony/phpunit-bridge": "^5.4|^6.0",
+        "symfony/serializer": "^5.4|^6.0",
+        "symfony/var-dumper": "^5.4|^6.0",
+        "symfony/yaml": "^5.4|^6.0",
         "symplify/easy-coding-standard": "^11.0"
     },
     "replace": {
