--- a/composer.json
+++ b/composer.json
@@ -58,12 +58,12 @@
         "ext-openssl": "*",
         "ext-sodium": "*",
         "brick/math": "^0.9|^0.10",
-        "fgrosse/phpasn1": "^2.0",
         "paragonie/constant_time_encoding": "^2.4",
         "psr/event-dispatcher": "^1.0",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
         "spomky-labs/aes-key-wrap": "^7.0",
+        "spomky-labs/pki-framework": "^1.0",
         "symfony/config": "^5.4|^6.0",
         "symfony/console": "^5.4|^6.0",
         "symfony/dependency-injection": "^5.4|^6.0",
@@ -89,6 +89,7 @@
         "phpstan/phpstan-phpunit": "^1.1",
         "phpstan/phpstan-strict-rules": "^1.4",
         "phpunit/phpunit": "^9.5.23",
+        "qossmic/deptrac-shim": "^1.0",
         "rector/rector": "^0.14",
         "roave/security-advisories": "dev-latest",
         "symfony/browser-kit": "^6.1.3",
