--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -2,214 +2,218 @@
 
 name: "Integrate"
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - "*.x"
+  pull_request: null
 
 jobs:
-    byte_level:
-        name: "0️⃣ Byte-level"
-        runs-on: "ubuntu-latest"
-        steps:
-            - name: "Checkout code"
-              uses: "actions/checkout@v3"
+  byte_level:
+    name: "0️⃣ Byte-level"
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: "Checkout code"
+        uses: "actions/checkout@v3"
 
-            - name: "Check file permissions"
-              run: |
-                  test "$(find . -type f -not -path './.git/*' -executable)" == ""
+      - name: "Check file permissions"
+        run: |
+          test "$(find . -type f -not -path './.git/*' -executable)" == ""
 
-            - name: "Find non-printable ASCII characters"
-              run: |
-                  ! LC_ALL=C.UTF-8 find . -type f -name "*.php" -print0 | xargs -0 -- grep -PHn "[^ -~]"
+      - name: "Find non-printable ASCII characters"
+        run: |
+          ! LC_ALL=C.UTF-8 find . -type f -name "*.php" -print0 | xargs -0 -- grep -PHn "[^ -~]"
 
-    syntax_errors:
-        name: "1️⃣ Syntax errors"
-        runs-on: "ubuntu-latest"
-        steps:
-            - name: "Set up PHP"
-              uses: "shivammathur/setup-php@v2"
-              with:
-                  php-version: "8.1"
+  syntax_errors:
+    name: "1️⃣ Syntax errors"
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: "Set up PHP"
+        uses: "shivammathur/setup-php@v2"
+        with:
+          php-version: "8.1"
 
-            - name: "Checkout code"
-              uses: "actions/checkout@v3"
+      - name: "Checkout code"
+        uses: "actions/checkout@v3"
 
-            - name: "Install dependencies"
-              uses: "ramsey/composer-install@v2"
-              with:
-                  dependency-versions: "highest"
+      - name: "Install dependencies"
+        uses: "ramsey/composer-install@v2"
+        with:
+          dependency-versions: "highest"
 
-            - name: "Check source code for syntax errors"
-              run: "composer exec -- parallel-lint src/ tests/"
+      - name: "Check source code for syntax errors"
+        run: "composer exec -- parallel-lint src/ tests/"
 
-    unit_tests:
-        name: "2️⃣ Unit and functional tests"
-        needs:
-            - "byte_level"
-            - "syntax_errors"
-        strategy:
-            matrix:
-                operating-system:
-                    - "ubuntu-latest"
-                php-version:
-                    - "8.1"
-                dependencies:
-                    - "lowest"
-                    - "highest"
-        runs-on: ${{ matrix.operating-system }}
-        steps:
-            - name: "Set up PHP"
-              uses: "shivammathur/setup-php@v2"
-              with:
-                  php-version: "${{ matrix.php-version }}"
-                  extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
-                  coverage: "xdebug"
+  unit_tests:
+    name: "2️⃣ Unit and functional tests"
+    needs:
+      - "byte_level"
+      - "syntax_errors"
+    strategy:
+      matrix:
+        operating-system:
+          - "ubuntu-latest"
+        php-version:
+          - "8.1"
+        dependencies:
+          - "lowest"
+          - "highest"
+    runs-on: ${{ matrix.operating-system }}
+    steps:
+      - name: "Set up PHP"
+        uses: "shivammathur/setup-php@v2"
+        with:
+          php-version: "${{ matrix.php-version }}"
+          extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+          coverage: "xdebug"
 
-            - name: "Checkout code"
-              uses: "actions/checkout@v3"
+      - name: "Checkout code"
+        uses: "actions/checkout@v3"
 
-            - name: "Install dependencies"
-              uses: "ramsey/composer-install@v2"
-              with:
-                  dependency-versions: "${{ matrix.dependencies }}"
-                  composer-options: "--optimize-autoloader"
+      - name: "Install dependencies"
+        uses: "ramsey/composer-install@v2"
+        with:
+          dependency-versions: "${{ matrix.dependencies }}"
+          composer-options: "--optimize-autoloader"
 
-            - name: "Execute unit tests"
-              run: "make ci-cc"
+      - name: "Execute unit tests"
+        run: "make ci-cc"
 
-    #      - name: Send coverage to Coveralls
-    #        if: "matrix.php-version == '8.1' && matrix.dependencies == 'highest'"
-    #        env:
-    #          COVERALLS_REPO_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-    #        run: |
-    #          wget "https://github.com/php-coveralls/php-coveralls/releases/download/v2.5.2/php-coveralls.phar"
-    #          php ./php-coveralls.phar -v
+  #      - name: Send coverage to Coveralls
+  #        if: "matrix.php-version == '8.1' && matrix.dependencies == 'highest'"
+  #        env:
+  #          COVERALLS_REPO_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+  #        run: |
+  #          wget "https://github.com/php-coveralls/php-coveralls/releases/download/v2.5.2/php-coveralls.phar"
+  #          php ./php-coveralls.phar -v
 
-    static_analysis:
-        name: "3️⃣ Static Analysis"
-        needs:
-            - "byte_level"
-            - "syntax_errors"
-        runs-on: "ubuntu-latest"
-        steps:
-            - name: "Set up PHP"
-              uses: "shivammathur/setup-php@v2"
-              with:
-                  php-version: "8.1"
-                  extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+  static_analysis:
+    name: "3️⃣ Static Analysis"
+    needs:
+      - "byte_level"
+      - "syntax_errors"
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: "Set up PHP"
+        uses: "shivammathur/setup-php@v2"
+        with:
+          php-version: "8.1"
+          extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
 
-            - name: "Checkout code"
-              uses: "actions/checkout@v3"
+      - name: "Checkout code"
+        uses: "actions/checkout@v3"
 
-            - name: "Validate Composer configuration"
-              run: "composer validate --strict"
+      - name: "Validate Composer configuration"
+        run: "composer validate --strict"
 
-            - name: "Install dependencies"
-              uses: "ramsey/composer-install@v2"
-              with:
-                  dependency-versions: "highest"
-                  composer-options: "--optimize-autoloader"
+      - name: "Install dependencies"
+        uses: "ramsey/composer-install@v2"
+        with:
+          dependency-versions: "highest"
+          composer-options: "--optimize-autoloader"
 
-            - name: "Execute static analysis"
-              run: "make st"
+      - name: "Execute static analysis"
+        run: "make st"
 
-    coding_standards:
-        name: "4️⃣ Coding Standards"
-        needs:
-            - "byte_level"
-            - "syntax_errors"
-        runs-on: "ubuntu-latest"
-        steps:
-            - name: "Set up PHP"
-              uses: "shivammathur/setup-php@v2"
-              with:
-                  php-version: "8.1"
-                  extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+  coding_standards:
+    name: "4️⃣ Coding Standards"
+    needs:
+      - "byte_level"
+      - "syntax_errors"
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: "Set up PHP"
+        uses: "shivammathur/setup-php@v2"
+        with:
+          php-version: "8.1"
+          extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
 
-            - name: "Checkout code"
-              uses: "actions/checkout@v3"
+      - name: "Checkout code"
+        uses: "actions/checkout@v3"
 
-            - name: "Check adherence to EditorConfig"
-              uses: "greut/eclint-action@v0"
+      - name: "Check adherence to EditorConfig"
+        uses: "greut/eclint-action@v0"
 
-            - name: "Install dependencies"
-              uses: "ramsey/composer-install@v2"
-              with:
-                  dependency-versions: "highest"
-                  composer-options: "--optimize-autoloader"
+      - name: "Install dependencies"
+        uses: "ramsey/composer-install@v2"
+        with:
+          dependency-versions: "highest"
+          composer-options: "--optimize-autoloader"
 
-            - name: "Check coding style"
-              run: "make ci-cs"
+      - name: "Check coding style"
+        run: "make ci-cs"
 
-    mutation_testing:
-        name: "5️⃣ Mutation Testing"
-        needs:
-            - "byte_level"
-            - "syntax_errors"
-        runs-on: "ubuntu-latest"
-        steps:
-            - name: "Set up PHP"
-              uses: "shivammathur/setup-php@v2"
-              with:
-                  php-version: "8.1"
-                  extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+  mutation_testing:
+    name: "5️⃣ Mutation Testing"
+    needs:
+      - "byte_level"
+      - "syntax_errors"
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: "Set up PHP"
+        uses: "shivammathur/setup-php@v2"
+        with:
+          php-version: "8.1"
+          extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
 
-            - name: "Checkout code"
-              uses: "actions/checkout@v3"
+      - name: "Checkout code"
+        uses: "actions/checkout@v3"
 
-            - name: "Fetch Git base reference"
-              run: "git fetch --depth=1 origin ${GITHUB_BASE_REF}"
+      - name: "Fetch Git base reference"
+        run: "git fetch --depth=1 origin ${GITHUB_BASE_REF}"
 
-            - name: "Install dependencies"
-              uses: "ramsey/composer-install@v2"
-              with:
-                  dependency-versions: "highest"
-                  composer-options: "--optimize-autoloader"
+      - name: "Install dependencies"
+        uses: "ramsey/composer-install@v2"
+        with:
+          dependency-versions: "highest"
+          composer-options: "--optimize-autoloader"
 
-            - name: "Execute Infection"
-              run: "make ci-mu"
+      - name: "Execute Infection"
+        run: "make ci-mu"
 
-    rector_checkstyle:
-        name: "6️⃣ Rector Checkstyle"
-        needs:
-            - "byte_level"
-            - "syntax_errors"
-        runs-on: "ubuntu-latest"
-        steps:
-            - name: "Set up PHP"
-              uses: "shivammathur/setup-php@v2"
-              with:
-                  php-version: "8.1"
-                  extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
-                  coverage: "xdebug"
+  rector_checkstyle:
+    name: "6️⃣ Rector Checkstyle"
+    needs:
+      - "byte_level"
+      - "syntax_errors"
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: "Set up PHP"
+        uses: "shivammathur/setup-php@v2"
+        with:
+          php-version: "8.1"
+          extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+          coverage: "xdebug"
 
-            - name: "Checkout code"
-              uses: "actions/checkout@v3"
+      - name: "Checkout code"
+        uses: "actions/checkout@v3"
 
-            - name: "Fetch Git base reference"
-              run: "git fetch --depth=1 origin ${GITHUB_BASE_REF}"
+      - name: "Fetch Git base reference"
+        run: "git fetch --depth=1 origin ${GITHUB_BASE_REF}"
 
-            - name: "Install dependencies"
-              uses: "ramsey/composer-install@v2"
-              with:
-                  dependency-versions: "highest"
-                  composer-options: "--optimize-autoloader"
+      - name: "Install dependencies"
+        uses: "ramsey/composer-install@v2"
+        with:
+          dependency-versions: "highest"
+          composer-options: "--optimize-autoloader"
 
-            - name: "Execute Rector"
-              run: "make rector"
+      - name: "Execute Rector"
+        run: "make rector"
 
-    exported_files:
-        name: "7️⃣ Exported files"
-        needs:
-            - "byte_level"
-            - "syntax_errors"
-        runs-on: "ubuntu-20.04"
-        steps:
-            - name: "Checkout code"
-              uses: "actions/checkout@v3"
+  exported_files:
+    name: "7️⃣ Exported files"
+    needs:
+      - "byte_level"
+      - "syntax_errors"
+    runs-on: "ubuntu-20.04"
+    steps:
+      - name: "Checkout code"
+        uses: "actions/checkout@v3"
 
-            - name: "Check exported files"
-              run: |
-                  EXPECTED="LICENSE,README.md,SECURITY.md,composer.json"
-                  CURRENT="$(git archive HEAD | tar --list --exclude="src" --exclude="src/*" | paste -s -d ",")"
-                  echo "CURRENT =${CURRENT}"
-                  echo "EXPECTED=${EXPECTED}"
-                  test "${CURRENT}" == "${EXPECTED}"
+      - name: "Check exported files"
+        run: |
+          EXPECTED="LICENSE,README.md,SECURITY.md,composer.json"
+          CURRENT="$(git archive HEAD | tar --list --exclude="src" --exclude="src/*" | paste -s -d ",")"
+          echo "CURRENT =${CURRENT}"
+          echo "EXPECTED=${EXPECTED}"
+          test "${CURRENT}" == "${EXPECTED}"
