--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@
 /.gitignore export-ignore
 /.gitsplit.yml export-ignore
 /CODE_OF_CONDUCT.md export-ignore
+/deptrac.yaml export-ignore
 /ecs.php export-ignore
 /infection.json export-ignore
 /Makefile export-ignore
